# steamdeck-rc

./: .gitmodules
client/: CMakeLists.txt
client/src/: BasicTimer.hpp  crsf-structs.hpp  main.cpp  rc-protocol.hpp  serialib.cpp
esp32-mini/: platformio.ini
esp32-mini/archive/: RX5808.cpp  RX5808.hpp
esp32-mini/src/: BasicTimer.hpp  RGB.hpp  RX5808.cpp  RX5808.hpp  crsf-arduino.hpp  crsf-structs.hpp  crsf.cpp  crsf.hpp  esp32mini.hpp  main.cpp  rc-protocol.hpp
fc/: platformio.ini
fc/src/: BasicTimer.hpp  main.cpp
